--- a/views/dashboard-customer/dashboard.ejs
+++ b/views/dashboard-customer/dashboard.ejs
@@ -11,7 +11,19 @@
     <br>
     
   </div><!-- End Page Title -->
-
+  <% if (message.length !=0) { if (message[0].alert=='success' ) { %>
+    <div class="alert alert-success" role="alert">
+        <%= message[0].message %>
+    </div>
+<% } else if (message[0].alert=='warning' ) { %>
+    <div class="alert alert-warning" role="alert">
+        <%= message[0].message %>
+    </div>
+<% } else { %>
+    <div class="alert alert-danger" role="alert">
+        <%= message[0].message %>
+    </div>
+<% } } %>
   
 
   <section class="section dashboard">
