--- a/views/layout/core-index.ejs
+++ b/views/layout/core-index.ejs
@@ -1,5 +1,2 @@
-<%- include('header') %>
-<%- include('sidebar') %>
-<%- include('nav') %>
-<%- body %>
-<%- include('footer') %>
+<%- include('header') %> <%- include('sidebar') %> <%- include('nav') %> <%-body
+%> <%- include('footer') %>
