--- a/views/layout/nav.ejs
+++ b/views/layout/nav.ejs
@@ -7,55 +7,61 @@
 </div><!-- End Logo -->
 
 <nav class="header-nav ms-auto">
-  <ul class="d-flex align-items-center">
+  <% if (userData) { %>
+    <ul class="d-flex align-items-center">
 
-    <li class="nav-item dropdown pe-3">
-
-      <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-        <img src="/assets/img/user2.png" alt="Profile" class="rounded-circle">
-        <span class="d-none d-md-block dropdown-toggle ps-2">Hi, <%= userData.username %></span>
-      </a><!-- End Profile Iamge Icon -->
-
-      <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
-        <li class="dropdown-header">
-          <h6><%= userData.name %></h6>
-          <span>Role: <%= userData.role %></span>
-        </li>
-        <li>
-          <hr class="dropdown-divider">
-        </li>
-
-        <!-- <li>
-          <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
-            <i class="bi bi-person"></i>
-            <span>My Profile</span>
-          </a>
-        </li>
-        <li>
-          <hr class="dropdown-divider">
-        </li> -->
-
-        <!-- <li>
-          <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
-            <i class="bi bi-gear"></i>
-            <span>Account Settings</span>
-          </a>
-        </li> -->
-        <li>
-          <hr class="dropdown-divider">
-        </li>
-
-        <li>
-          <a class="dropdown-item d-flex align-items-center" href="/logout">
-            <i class="bi bi-box-arrow-right"></i>
-            <span>Sign Out</span>
-          </a>
-        </li>
-
-      </ul><!-- End Profile Dropdown Items -->
-    </li><!-- End Profile Nav -->
-
-  </ul>
+      <li class="nav-item dropdown pe-3">
+  
+        <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
+          <img src="/assets/img/user2.png" alt="Profile" class="rounded-circle">
+          <span class="d-none d-md-block dropdown-toggle ps-2">Hi, <%= userData.username %> </span>
+        </a><!-- End Profile Iamge Icon -->
+  
+        <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
+          <li class="dropdown-header">
+            <h6><%= userData.name %></h6>
+            <span><%= userData.role === 1 ? 'Super Admin' : (userData.role === 2 ? 'Admin' : 'Customer') %>
+            </span>
+          </li>
+          <li>
+            <hr class="dropdown-divider">
+          </li>
+  
+          <!-- <li>
+            <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
+              <i class="bi bi-person"></i>
+              <span>My Profile</span>
+            </a>
+          </li>
+          <li>
+            <hr class="dropdown-divider">
+          </li> -->
+  
+          <!-- <li>
+            <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
+              <i class="bi bi-gear"></i>
+              <span>Account Settings</span>
+            </a>
+          </li> -->
+          <li>
+            <hr class="dropdown-divider">
+          </li>
+  
+          <li>
+            <a class="dropdown-item d-flex align-items-center" href="/logout">
+              <i class="bi bi-box-arrow-right"></i>
+              <span>Sign Out</span>
+            </a>
+          </li>
+  
+        </ul><!-- End Profile Dropdown Items -->
+      </li><!-- End Profile Nav -->
+  
+    </ul>
+  <% } else { %>
+    <p>Not Found</p>
+  <% } %>
 </nav><!-- End Icons Navigation -->
 
 </header><!-- End Header -->
+
