--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -718,8 +718,8 @@ h6 {
   transition: all 0.3s;
   padding: 20px;
   overflow-y: auto;
-  scrollbar-width: thin;
-  scrollbar-color: #aab7cf transparent;
+  /* scrollbar-width: thin;
+  scrollbar-color: #aab7cf transparent; */
   box-shadow: 0px 0px 20px rgba(1, 41, 112, 0.1);
   background-color: #fff;
 }
